Adding more Component interactions like ViewChild

--- a/angular.json
+++ b/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "component-interaction"
+  "defaultProject": "component-interaction",
+  "cli": {
+    "analytics": false
+  }
 }
